--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up for Squid Game</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -44,6 +45,11 @@
             <div class="submit-btn">
                 <button type="submit">CREATE ACCOUNT</button>
                 <p>Already Have an account? Login</p>
+                <span>
+                    <a href="https://github.com/Kumar-Aryan-99Pk" aria-label="Visit my GitHub profile">
+                    <i class="bi bi-github"></i>Follow my work on Github
+                    </a>
+                </span>
             </div>
             
         </div>
